Can't duplicate or copy (Ctrl-C) object from linked file #90840

Closed
opened 2021-08-22 02:35:06 +02:00 by Vanessa Dannenberg · 7 comments

System Information:
OS: Debian

Blender version
Broken: 3.0.0, branch: master, Hash: b477333473, commit date: 2021-08-22
Working: 2.92 (2021-02-24)

Short description
In 2.93.3, if I have a project which has objects linked into it from another .blend file, when I try to duplicate one of those objects (e.g. shift-D), it doesn't work.
I opened the project file under 2.92.0, and duplicating works exactly as it should there.

Blender highlights the object with a white outline (which is what it normally does when moving an object), the mouse cursor changes its appearance and obeys my mouse movements, and the status bar follows suit, tracking the cursor position, but the actual object just stays put.

The same problem occurs if I try to copy/paste -- I can select the object and press Ctrl-C, and it acts like it's working, says a data block was copied (or some words to that effect), but then trying to paste fails (says there's nothing to paste).

Steps to reproduce

  • Load default scene with Cube and save the .blend file
  • Create another new project, but with some other object. Say, a cylinder.
  • Move the cylinder off to one side.
  • Click File -> Link -> Object -> Cube

Select the new cube object in your workspace, and attempt to duplicate or copy it.

**System Information:** OS: Debian **Blender version** Broken: 3.0.0, branch: master, Hash: `b477333473`, commit date: `2021-08-22` Working: 2.92 (`2021-02-24`) **Short description** In 2.93.3, if I have a project which has objects linked into it from another .blend file, when I try to duplicate one of those objects (e.g. shift-D), it doesn't work. I opened the project file under 2.92.0, and duplicating works exactly as it should there. Blender highlights the object with a white outline (which is what it normally does when moving an object), the mouse cursor changes its appearance and obeys my mouse movements, and the status bar follows suit, tracking the cursor position, but the actual object just stays put. The same problem occurs if I try to copy/paste -- I can select the object and press Ctrl-C, and it acts like it's working, says a data block was copied (or some words to that effect), but then trying to paste fails (says there's nothing to paste). **Steps to reproduce** - Load default scene with Cube and save the .blend file - Create another new project, but with some other object. Say, a cylinder. - Move the cylinder off to one side. - Click File -> Link -> Object -> Cube # Select the new cube object in your workspace, and attempt to duplicate or copy it.

Added subscriber: @VanessaE

Added subscriber: @VanessaE

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report. Can reproduce the described issue on master.

Could not find any old issue to merge the present ticket also I don't not see any points in 2.93 release notes related to this situation. I think this is not intended behavior so confirming the report.

Thanks for the report. Can reproduce the described issue on master. Could not find any old issue to merge the present ticket also I don't not see any points in 2.93 release notes related to this situation. I think this is not intended behavior so confirming the report.
Bastien Montagne self-assigned this 2021-08-23 14:33:57 +02:00

This issue was referenced by 379ffa75aa

This issue was referenced by 379ffa75aa0cf80ece0b831fdf6b3d2994743740

This issue was referenced by 46913bf0a0

This issue was referenced by 46913bf0a08c7e9ae5525ff95af0c7dc3b2f622f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90840
There is no content yet.